# setuptools-py2cfg

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setuptools-py2cfg.py  setuptools_py2cfg.py  tox.ini
.github/workflows/: tox.yml
tests/: setuptools_py2cfg.py  test_py2cfg.py  util.py
tests/testpkg1/: README.rst  setup.py
