[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools-py2cfg"
version = "2.1.0"
authors = [{name = "Georgi Valkov", email = "georgi.t.valkov@gmail.com"}]
license = {text = "Revised BSD License"}
description = "Converts a setuptools setup.py to setup.cfg"
readme = "README.md"
keywords = ["setuptools", "setup.cfg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.6"
dependencies = ['setuptools; python_version>="3.12"']

[project.urls]
Homepage = "https://github.com/gvalkov/setuptools-py2cfg"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
setuptools-py2cfg = "setuptools_py2cfg:main"

[tool.setuptools]
py-modules = ["setuptools_py2cfg"]
