[metadata]
name = setuptools-py2cfg
version = 2.0.0
author = Georgi Valkov
author_email = georgi.t.valkov@gmail.com

license = Revised BSD License
description = Convert a setuptools setup.py to a setup.cfg
long_description = file: README.rst
keywords = setuptools, setup.cfg
url = https://github.com/gvalkov/setuptools-py2cfg

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License

[options]
zip_safe = True
py_modules = setuptools_py2cfg
python_requires = >=3.3

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts = setuptools-py2cfg = setuptools_py2cfg:main
